# Gradient-Light-Bridge

./: .gitignore  AGENTS.md  LICENSE  README.md
daemon/: argb-to-hue.plist  argb-to-hue.service  argb_to_hue.py  config.yaml  requirements.txt
docs/: argb-backend-architecture.excalidraw  hue-api-device-cycle.md
firmware/: CMakeLists.txt  in-docker.sh  monitor.py  monitor2.py  monitor3.py  monitor4.py  monitor5.py  monitor6.py  monitor8.py  monitor_discover.py  sdkconfig.defaults  send_cmd.py
firmware/gradient_probe/: CMakeLists.txt
firmware/gradient_probe/main/: CMakeLists.txt  gradient_probe.c  gradient_probe.h
firmware/main/: CMakeLists.txt  argb_to_hue.c  argb_to_hue.h  local_led_backend.c  local_led_backend.h  trust_center_key.h  trust_center_key.h.in  xy_to_rgb.c  xy_to_rgb.h
firmware/sniffer_probe/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/sniffer_probe/main/: CMakeLists.txt  idf_component.yml  sniffer_probe.c
references/: .gitignore  README.md  SHA256SUMS  sources.bib
references/articles/: README.md  hal9k-sniffing-philips-hue-zigbee-traffic-with-wireshark
references/web-notes/: hue-re-notes.md
research/: gradient_probe_log.txt  hue-references.md  hue_bridge_lights.json  zdo-lcx004-vs-fake.md
research/gradient-probe-capture-20260703-1036-real-baseline/: after-lights.json  before-lights.json  new-lights.json
research/hue-api-diffs/: 20260703-basic-c0-c1-metadata-summary.md  20260703-fc03-brightness-and-dynamic-scene.md  20260703-gradient-pixel-count-vs-points-capable.md  20260703-groups-scenes-fc03-explicit-summary.md  20260703-hue-app-gradient-action-summary.md  20260703-real-lcx004-factory-reset-sniffer-summary.md  20260703-real-lcx004-sniffer-rxidle-summary.md  20260703-room-groupcast-onoff.md  20260704-power-on-startup-settings.md  lcx004-real-vs-fake-summary.json  lcx004-real-vs-fake.json
research/hue-api-diffs/action-capture-20260703-hue-app-color-change/: README.md  after-v1-lights.json  after-v2-devices.json  after-v2-lights.json  before-v2-lights.json
research/hue-api-diffs/action-capture-20260703-hue-app-gradient-parser/: README.md  after-v1-lights.json  after-v2-lights.json  before-v1-lights.json
research/hue-api-diffs/after-ota-metadata-flash/: lcx004-real-vs-new-fake.json  new-lights.json
research/hue-api-diffs/discovery-capture-20260703-102306/: after-v1-lights.json  after-v1-new-lights.json  after-v2-lights.json  before-v1-lights.json  before-v2-devices.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-102956-zcl-logging/: after-v1-lights.json  after-v1-new-lights.json  after-v2-devices.json  after-v2-lights.json  before-v1-lights.json  before-v2-devices.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-103550-touchlink-fc01attrs/: after-v1-lights.json  after-v1-new-lights.json  after-v2-lights.json  before-v1-lights.json
research/hue-api-diffs/discovery-capture-20260703-105427-long-passive/: after-v1-lights.json  after-v1-new-lights.json  after-v2-devices.json  after-v2-lights.json  before-v1-lights.json  before-v2-devices.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-110225-endpoint242/: before-v1-lights.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-110430-endpoint242-gateway/: after-v1-lights.json  after-v1-new-lights.json  after-v2-lights.json  before-v1-lights.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-113156-zdo-override/: after-v1-lights.json  after-v1-new-lights.json  after-v2-lights.json  before-v1-lights.json
research/hue-api-diffs/discovery-capture-20260703-114011-zcl-raw-logger/: after-v1-new-lights.json  before-v1-lights.json  before-v2-devices.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-114828-color-points-fc03-discover/: after-v1-lights.json  after-v1-new-lights.json  after-v2-lights.json  before-v1-lights.json  before-v2-devices.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-115906-fc01-frame-control/: after-v1-new-lights.json  after-v2-devices.json  after-v2-lights.json  before-v1-lights.json  before-v2-devices.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-120344-fc01-explicit-default-response/: after-v1-lights.json  after-v1-new-lights.json  after-v2-devices.json  before-v1-lights.json
research/hue-api-diffs/discovery-capture-20260703-120928-fc01-explicit-default-response-consume/: after-v1-new-lights.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-basic-0001-lcx004/: after-v1-lights.json  after-v1-new-lights.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-basic-0001-lcx004-rerun/: after-v1-new-lights.json  before-v1-lights.json  before-v2-devices.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-basic-c0-raw-c1/: after-v1-new-lights.json  before-v1-lights.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-basic-c0-raw-c1-specific/: after-v1-new-lights.json
research/hue-api-diffs/discovery-capture-20260703-basic-c0-raw-c1-variants/: after-v1-lights.json  after-v1-new-lights.json  after-v2-devices.json  after-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-basic-platform/: after-v1-lights.json  after-v1-new-lights.json  after-v2-devices.json  after-v2-lights.json  before-v1-lights.json  before-v2-lights.json
research/hue-api-diffs/discovery-capture-20260703-basic-read-raw-productid/: after-v1-new-lights.json  after-v2-lights.json  before-v1-lights.json  before-v2-devices.json
research/hue-api-diffs/discovery-capture-20260703-basic-write-attrs/: after-v1-lights.json  after-v1-new-lights.json  after-v2-lights.json  before-v1-lights.json  (+1 more)
tools/: capture_hue_action.py  capture_hue_discovery.py  capture_real_lcx004_sniffer.sh  capture_sniffer_probe.py  decode_zigbee_pcap.py  hue_light_cycle.py  sniffer_log_to_pcap.py  summarize_sniffer_log.py  watch_serial_json.py
(+184 files in other folders)
