set(ARGB_EUI_SUFFIX_VALUE "FF:FE:05")
if(DEFINED ARGB_EUI_SUFFIX)
    set(ARGB_EUI_SUFFIX_VALUE "${ARGB_EUI_SUFFIX}")
elseif(DEFINED ENV{ARGB_EUI_SUFFIX})
    set(ARGB_EUI_SUFFIX_VALUE "$ENV{ARGB_EUI_SUFFIX}")
endif()

set(ARGB_SERIAL_DEBUG_VALUE "0")
if(DEFINED ARGB_SERIAL_DEBUG)
    set(ARGB_SERIAL_DEBUG_VALUE "${ARGB_SERIAL_DEBUG}")
elseif(DEFINED ENV{ARGB_SERIAL_DEBUG})
    set(ARGB_SERIAL_DEBUG_VALUE "$ENV{ARGB_SERIAL_DEBUG}")
endif()

set(ARGB_BACKEND_VALUE "ARGB_BACKEND_SERIAL_JSON")
if(DEFINED ARGB_BACKEND)
    set(ARGB_BACKEND_VALUE "${ARGB_BACKEND}")
elseif(DEFINED ENV{ARGB_BACKEND})
    set(ARGB_BACKEND_VALUE "$ENV{ARGB_BACKEND}")
endif()

string(TOLOWER "${ARGB_BACKEND_VALUE}" ARGB_BACKEND_VALUE)
if(ARGB_BACKEND_VALUE STREQUAL "argb_backend_serial_json" OR ARGB_BACKEND_VALUE STREQUAL "serial_json")
    set(ARGB_BACKEND_ID 1)
elseif(ARGB_BACKEND_VALUE STREQUAL "argb_backend_local_led" OR ARGB_BACKEND_VALUE STREQUAL "local_led")
    set(ARGB_BACKEND_ID 2)
else()
    message(FATAL_ERROR "Unsupported ARGB_BACKEND=${ARGB_BACKEND_VALUE}; expected ARGB_BACKEND_SERIAL_JSON or ARGB_BACKEND_LOCAL_LED")
endif()

set(ARGB_LED_GPIO_VALUE "-1")
if(DEFINED ARGB_LED_GPIO)
    set(ARGB_LED_GPIO_VALUE "${ARGB_LED_GPIO}")
elseif(DEFINED ENV{ARGB_LED_GPIO})
    set(ARGB_LED_GPIO_VALUE "$ENV{ARGB_LED_GPIO}")
endif()

set(ARGB_LED_COUNT_VALUE "12")
if(DEFINED ARGB_LED_COUNT)
    set(ARGB_LED_COUNT_VALUE "${ARGB_LED_COUNT}")
elseif(DEFINED ENV{ARGB_LED_COUNT})
    set(ARGB_LED_COUNT_VALUE "$ENV{ARGB_LED_COUNT}")
endif()

set(ARGB_COLOR_ORDER_VALUE "GRB")
if(DEFINED ARGB_COLOR_ORDER)
    set(ARGB_COLOR_ORDER_VALUE "${ARGB_COLOR_ORDER}")
elseif(DEFINED ENV{ARGB_COLOR_ORDER})
    set(ARGB_COLOR_ORDER_VALUE "$ENV{ARGB_COLOR_ORDER}")
endif()
string(TOUPPER "${ARGB_COLOR_ORDER_VALUE}" ARGB_COLOR_ORDER_VALUE)

if(ARGB_COLOR_ORDER_VALUE STREQUAL "RGB")
    set(ARGB_COLOR_ORDER_ID 0)
elseif(ARGB_COLOR_ORDER_VALUE STREQUAL "GRB")
    set(ARGB_COLOR_ORDER_ID 1)
elseif(ARGB_COLOR_ORDER_VALUE STREQUAL "BRG")
    set(ARGB_COLOR_ORDER_ID 2)
elseif(ARGB_COLOR_ORDER_VALUE STREQUAL "RBG")
    set(ARGB_COLOR_ORDER_ID 3)
elseif(ARGB_COLOR_ORDER_VALUE STREQUAL "GBR")
    set(ARGB_COLOR_ORDER_ID 4)
elseif(ARGB_COLOR_ORDER_VALUE STREQUAL "BGR")
    set(ARGB_COLOR_ORDER_ID 5)
elseif(ARGB_BACKEND_ID EQUAL 2)
    message(FATAL_ERROR "Unsupported ARGB_COLOR_ORDER=${ARGB_COLOR_ORDER_VALUE}; expected RGB, GRB, BRG, RBG, GBR, or BGR")
else()
    set(ARGB_COLOR_ORDER_ID 1)
endif()

function(argb_get_config_value NAME DEFAULT OUT_VAR)
    if(DEFINED ${NAME})
        set(${OUT_VAR} "${${NAME}}" PARENT_SCOPE)
    elseif(DEFINED ENV{${NAME}})
        set(${OUT_VAR} "$ENV{${NAME}}" PARENT_SCOPE)
    else()
        set(${OUT_VAR} "${DEFAULT}" PARENT_SCOPE)
    endif()
endfunction()

argb_get_config_value(ARGB_COLOR_CORRECTION_ENABLED "1" ARGB_COLOR_CORRECTION_ENABLED_VALUE)
argb_get_config_value(ARGB_COLOR_CORRECTION "TypicalLEDStrip" ARGB_COLOR_CORRECTION_VALUE)
string(TOLOWER "${ARGB_COLOR_CORRECTION_VALUE}" ARGB_COLOR_CORRECTION_KEY)
if(ARGB_COLOR_CORRECTION_KEY STREQUAL "typicalsmd5050" OR
   ARGB_COLOR_CORRECTION_KEY STREQUAL "typicalledstrip")
    set(ARGB_COLOR_CORRECTION_R_DEFAULT 255)
    set(ARGB_COLOR_CORRECTION_G_DEFAULT 176)
    set(ARGB_COLOR_CORRECTION_B_DEFAULT 240)
elseif(ARGB_COLOR_CORRECTION_KEY STREQUAL "typical8mmpixel" OR
       ARGB_COLOR_CORRECTION_KEY STREQUAL "typicalpixelstring")
    set(ARGB_COLOR_CORRECTION_R_DEFAULT 255)
    set(ARGB_COLOR_CORRECTION_G_DEFAULT 224)
    set(ARGB_COLOR_CORRECTION_B_DEFAULT 140)
elseif(ARGB_COLOR_CORRECTION_KEY STREQUAL "uncorrectedcolor")
    set(ARGB_COLOR_CORRECTION_R_DEFAULT 255)
    set(ARGB_COLOR_CORRECTION_G_DEFAULT 255)
    set(ARGB_COLOR_CORRECTION_B_DEFAULT 255)
else()
    message(FATAL_ERROR "Unsupported ARGB_COLOR_CORRECTION=${ARGB_COLOR_CORRECTION_VALUE}")
endif()

argb_get_config_value(ARGB_COLOR_TEMPERATURE "Candle" ARGB_COLOR_TEMPERATURE_VALUE)
string(TOLOWER "${ARGB_COLOR_TEMPERATURE_VALUE}" ARGB_COLOR_TEMPERATURE_KEY)
if(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "candle")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 147)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 41)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "tungsten40w")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 197)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 143)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "tungsten100w")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 214)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 170)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "halogen")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 241)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 224)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "carbonarc")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 250)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 244)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "highnoonsun")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 251)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "directsunlight" OR
       ARGB_COLOR_TEMPERATURE_KEY STREQUAL "uncorrectedtemperature")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 255)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "overcastsky")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 201)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 226)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 255)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "clearbluesky")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 64)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 156)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 255)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "warmfluorescent")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 244)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 229)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "standardfluorescent")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 244)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 250)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "coolwhitefluorescent")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 212)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 235)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 255)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "fullspectrumfluorescent")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 244)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 242)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "growlightfluorescent")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 239)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 247)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "blacklightfluorescent")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 167)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 0)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 255)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "mercuryvapor")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 216)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 247)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 255)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "sodiumvapor")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 209)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 178)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "metalhalide")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 242)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 252)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 255)
elseif(ARGB_COLOR_TEMPERATURE_KEY STREQUAL "highpressuresodium")
    set(ARGB_COLOR_TEMPERATURE_R_DEFAULT 255)
    set(ARGB_COLOR_TEMPERATURE_G_DEFAULT 183)
    set(ARGB_COLOR_TEMPERATURE_B_DEFAULT 76)
else()
    message(FATAL_ERROR "Unsupported ARGB_COLOR_TEMPERATURE=${ARGB_COLOR_TEMPERATURE_VALUE}")
endif()

argb_get_config_value(ARGB_COLOR_CORRECTION_R "${ARGB_COLOR_CORRECTION_R_DEFAULT}" ARGB_COLOR_CORRECTION_R_VALUE)
argb_get_config_value(ARGB_COLOR_CORRECTION_G "${ARGB_COLOR_CORRECTION_G_DEFAULT}" ARGB_COLOR_CORRECTION_G_VALUE)
argb_get_config_value(ARGB_COLOR_CORRECTION_B "${ARGB_COLOR_CORRECTION_B_DEFAULT}" ARGB_COLOR_CORRECTION_B_VALUE)
argb_get_config_value(ARGB_COLOR_TEMPERATURE_R "${ARGB_COLOR_TEMPERATURE_R_DEFAULT}" ARGB_COLOR_TEMPERATURE_R_VALUE)
argb_get_config_value(ARGB_COLOR_TEMPERATURE_G "${ARGB_COLOR_TEMPERATURE_G_DEFAULT}" ARGB_COLOR_TEMPERATURE_G_VALUE)
argb_get_config_value(ARGB_COLOR_TEMPERATURE_B "${ARGB_COLOR_TEMPERATURE_B_DEFAULT}" ARGB_COLOR_TEMPERATURE_B_VALUE)
argb_get_config_value(ARGB_COLOR_GAIN_R "1.0" ARGB_COLOR_GAIN_R_VALUE)
argb_get_config_value(ARGB_COLOR_GAIN_G "1.0" ARGB_COLOR_GAIN_G_VALUE)
argb_get_config_value(ARGB_COLOR_GAIN_B "0.7" ARGB_COLOR_GAIN_B_VALUE)
argb_get_config_value(ARGB_COLOR_GAMMA_R "1.0" ARGB_COLOR_GAMMA_R_VALUE)
argb_get_config_value(ARGB_COLOR_GAMMA_G "1.0" ARGB_COLOR_GAMMA_G_VALUE)
argb_get_config_value(ARGB_COLOR_GAMMA_B "1.0" ARGB_COLOR_GAMMA_B_VALUE)

set(ARG_MAIN_SRCS argb_to_hue.c xy_to_rgb.c zcl_utility.c)
set(ARG_MAIN_PRIV_REQUIRES nvs_flash esp_driver_uart ieee802154)

if(ARGB_BACKEND_ID EQUAL 2)
    if(ARGB_LED_GPIO_VALUE LESS 0)
        message(FATAL_ERROR "ARGB_BACKEND_LOCAL_LED requires ARGB_LED_GPIO=<gpio>")
    endif()
    if(ARGB_LED_COUNT_VALUE LESS 1)
        message(FATAL_ERROR "ARGB_BACKEND_LOCAL_LED requires ARGB_LED_COUNT >= 1")
    endif()
    list(APPEND ARG_MAIN_SRCS local_led_backend.c)
    list(APPEND ARG_MAIN_PRIV_REQUIRES esp_driver_rmt)
endif()

idf_component_register(
    SRCS ${ARG_MAIN_SRCS}
    INCLUDE_DIRS "."
                 "../managed_components/espressif__esp-zigbee-lib/include"
                 "../managed_components/espressif__esp-zboss-lib/include"
    PRIV_REQUIRES ${ARG_MAIN_PRIV_REQUIRES}
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
    ARGB_EUI_SUFFIX="${ARGB_EUI_SUFFIX_VALUE}"
    ARGB_SERIAL_DEBUG=${ARGB_SERIAL_DEBUG_VALUE}
    ARGB_BACKEND=${ARGB_BACKEND_ID}
    ARGB_LED_GPIO=${ARGB_LED_GPIO_VALUE}
    ARGB_LED_COUNT=${ARGB_LED_COUNT_VALUE}
    ARGB_COLOR_ORDER=${ARGB_COLOR_ORDER_ID}
    ARGB_COLOR_CORRECTION_ENABLED=${ARGB_COLOR_CORRECTION_ENABLED_VALUE}
    ARGB_COLOR_CORRECTION_R=${ARGB_COLOR_CORRECTION_R_VALUE}
    ARGB_COLOR_CORRECTION_G=${ARGB_COLOR_CORRECTION_G_VALUE}
    ARGB_COLOR_CORRECTION_B=${ARGB_COLOR_CORRECTION_B_VALUE}
    ARGB_COLOR_TEMPERATURE_R=${ARGB_COLOR_TEMPERATURE_R_VALUE}
    ARGB_COLOR_TEMPERATURE_G=${ARGB_COLOR_TEMPERATURE_G_VALUE}
    ARGB_COLOR_TEMPERATURE_B=${ARGB_COLOR_TEMPERATURE_B_VALUE}
    ARGB_COLOR_GAIN_R=${ARGB_COLOR_GAIN_R_VALUE}
    ARGB_COLOR_GAIN_G=${ARGB_COLOR_GAIN_G_VALUE}
    ARGB_COLOR_GAIN_B=${ARGB_COLOR_GAIN_B_VALUE}
    ARGB_COLOR_GAMMA_R=${ARGB_COLOR_GAMMA_R_VALUE}
    ARGB_COLOR_GAMMA_G=${ARGB_COLOR_GAMMA_G_VALUE}
    ARGB_COLOR_GAMMA_B=${ARGB_COLOR_GAMMA_B_VALUE}
)
